--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ button{
 }
 #header {
     background-image: url(images/bg.svg);
- 
     color: white;
     height: 560px;
 }
@@ -60,7 +59,8 @@ button{
 .VideoSession {
     padding: 10vh 17vh;
     display: flex;
-    align-items: center ;
+    align-items: center;
+    justify-content: center;
 }
 .VideoSession h1{
     color: #247BA0;
@@ -77,9 +77,8 @@ button{
     line-height: 150%;
 }
 .VideoSession iframe{
-   
-    width: 900px;
-    height: 350px;
+    width: 700px;
+    height: 400px;
     margin-right: 50px;
    
 }
@@ -184,4 +183,55 @@ button{
 .formulario button:hover{
     transform: translateY(-5px);
     transition: 0.8s;
+}
+
+@media (max-width: 720px) {
+    #header{
+        height: 100vh;
+    }
+    .text {
+        margin: 25px;
+    }
+    .ListProducts {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 40vh;
+        background-color: #EAECE5;
+        
+    }
+    .VideoSession {
+        padding: 25px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .VideoSession iframe{
+        width: 100%;
+        margin: 20px auto;
+    }
+    .depoimentos {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        background-color: #247BA0;
+        color: #EAECE5;
+        height: 100vh;
+    }
+    .depoimentos li{
+        margin: 30px auto;
+        padding: 0;
+    }
+    #arrow-right,
+    #arrow-left{
+        display: none;
+    }
+    #bruna {
+        display: inline-block;
+    }
+    .depoimentos img{
+        max-width: 380px;
+    }
+    
 }
