--- a/style.css
+++ b/style.css
@@ -201,11 +201,17 @@ button{
         
     }
     .VideoSession {
-        padding: 25px;
+        padding: 50px 25px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+    .VideoSession h1{
+        font-size: 42px;
+    }
+    .VideoSession p{
+        font-size: 22px;
     }
     .VideoSession iframe{
         width: 100%;
